Addition of the MessageStore Tool. Small changes to the Exchanges to allow the extraction of currently listed items.
Extracted initial broker configuration mechanism to a reusable class. Have modified broker to use it.

Move the Passwd.java to new tools package structure on the broker.

git-svn-id: https://svn.apache.org/repos/asf/incubator/qpid/branches/M2@553248 13f79535-47bb-0310-9956-ffa450edef68